--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -1,6 +1,7 @@
 version: 1.2
 workflows:
   - subclass: <CWL | WDL | NFL | GALAXY>
+    primaryDescriptorPath: "/descriptor.yml"
     authors:
       - name: David Maimoun
         email: bioinfomoh@gmail.com
