--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -1,8 +1,22 @@
-version: 1.2
-workflows:
-  - subclass: <CWL | WDL | NFL | GALAXY>
-    primaryDescriptorPath: "/descriptor.yml"
-    authors:
-      - name: David Maimoun
-        email: bioinfomoh@gmail.com
-    topic: Fetch NM clonal complex and MenDeVAR
+# .dockstore.yml
+name: nm_mendevar_and_cc
+primaryDescriptorPath: "/nm_cc_and_mendevar.wdl"  
+docker: "devorbitus/ubuntu-bash-jq-curl:latest"
+workflowType: "WDL"
+workflowTypeVersion: "1.0"
+author: "Your Name"
+description: "Workflow to obtain clonal complex information and MendeVar reactivity data"
+inputs:
+  - assembly:
+      type: File
+      description: "Assembly sequence file"
+outputs:
+  - clonal_complex:
+      type: String
+      description: "Clonal complex result"
+  - mendevar_bexsero_reactivity:
+      type: String
+      description: "MendeVar Bexsero reactivity"
+  - mendevar_trumenba_reactivity:
+      type: String
+      description: "MendeVar Trumenba reactivity"
