--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -1,23 +1,23 @@
-version: 1.0
 workflows:
   - subclass: WDL
-  primaryDescriptorPath: /nm_cc_and_mendevar.wdl
-  docker: "devorbitus/ubuntu-bash-jq-curl:latest"
-  workflowType: "WDL"
-  workflowTypeVersion: "1.0"
-  author: "Your Name"
-  description: "Workflow to obtain clonal complex information and MendeVar reactivity data"
-  inputs:
-    - assembly:
-        type: File
-        description: "Assembly sequence file"
-  outputs:
-    - clonal_complex:
-        type: String
-        description: "Clonal complex result"
-    - mendevar_bexsero_reactivity:
-        type: String
-        description: "MendeVar Bexsero reactivity"
-    - mendevar_trumenba_reactivity:
-        type: String
-        description: "MendeVar Trumenba reactivity"
+    primaryDescriptorPath: /nm_cc_and_mendevar.wdl
+    docker: "devorbitus/ubuntu-bash-jq-curl:latest"
+    workflowType: "WDL"
+    workflowTypeVersion: "1.0"
+    author: "David Maimoun"
+    description: "Workflow to obtain clonal complex information and MendeVar reactivity data"
+    inputs:
+      - assembly:
+          type: File
+          description: "Assembly sequence file"
+    outputs:
+      - clonal_complex:
+          type: String
+          description: "Clonal complex result"
+      - mendevar_bexsero_reactivity:
+          type: String
+          description: "MendeVar Bexsero reactivity"
+      - mendevar_trumenba_reactivity:
+          type: String
+          description: "MendeVar Trumenba reactivity"
+
