--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -3,4 +3,6 @@ workflows:
  - name: Fetch_NM_CC_and_MenDeVAR
    subclass: WDL
    primaryDescriptorPath: /nm_cc_and_mendevar.wdl
+   authors:
+   - David Maimoun
 
